--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,11 @@ license-file = "README.md"
 description = "The pepe frog linux fetch."
 repository = "https://github.com/sigmw/pepefetch"
 
+[[bin]]
+name = "pepefetch"
+test = false
+bench = false
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
